# spagri_cut_strawberry

./: .gitignore  cursor_.md
00_pilot/: arrow.py  method3.py  pilot_test.py
00_pilot/mot/mf_perception/ros2_ws/src/mf_mot_object_tracker/: CMakeLists.txt  mf_mot.rviz
00_pilot/mot/mf_perception/ros2_ws/src/mf_mot_object_tracker/launch/: reading_specs_and_run.launch.py  seedling.launch.py
00_pilot/mot/mf_perception/ros2_ws/src/mf_mot_object_tracker/scripts/: match_port.py  mot_by_bbox.py  mot_by_bbox_pre_a.py  mot_by_bbox_server.py  mot_by_keypoint.py  mot_seedling_arrow2d.py  yolo.py  yolo_seedling.py
00_pilot/mot/mf_perception/ros2_ws/src/mf_mot_object_tracker/scripts/params/: params_mot_by_keypoint_seedling.py
00_pilot/mot/mf_perception/ros2_ws/src/mf_mot_object_tracker/scripts/params/mot_by_bbox/: params_mot_by_bbox_cherry_tomato.py  strawberry_harvesting_pollination.py
00_pilot/mot/mf_perception/ros2_ws/src/mf_mot_object_tracker/scripts/params/mot_seedling_arrow2d/: params_seedling.py
00_pilot/sam_out/: straw_color_A_000000_box.txt  straw_color_A_000006_box.txt  straw_color_A_000007_box.txt  straw_color_A_000013_box.txt  straw_color_A_000026_box.txt  straw_seg_000001_box.txt  straw_seg_000008_box.txt  (+3 more)
01_test_prin_tf/perception/ros2_ws/src/mf_mot_object_tracker/: CMakeLists.txt  package.xml  point_distances.csv  save_3_18.csv  saved_calibration  test.py
01_test_prin_tf/perception/ros2_ws/src/mf_mot_object_tracker/csv_data/: save_1_28.csv  save_2_18.csv  대각_먼거리.csv  대각_짧은거리.csv
01_test_prin_tf/perception/ros2_ws/src/mf_mot_object_tracker/launch/: reading_specs_and_run.launch.py  reprojection_make.py
01_test_prin_tf/perception/ros2_ws/src/mf_mot_object_tracker/rosbag/rosbag2_2025_07_28-13_49_05/: metadata.yaml
01_test_prin_tf/perception/ros2_ws/src/mf_mot_object_tracker/rosbag/rosbag2_2025_07_28-14_05_15/: metadata.yaml
01_test_prin_tf/perception/ros2_ws/src/mf_mot_object_tracker/scripts/: 001_generate_keypoints.py  002_eval_keypoints_acc.py  004_keypoints_test.py  img_checker.py  test_keypoints.py  test_prin_stable.py  test_reprojection.py  yolo.py  z_test_depth_only.py
01_test_prin_tf/perception/ros2_ws/src/mf_mot_object_tracker/scripts/enhanced_images/: tf_data.csv
01_test_prin_tf/perception/ros2_ws/src/mf_mot_object_tracker/scripts/params/mot_by_bbox/: keypoint_tf_generation.py  params_mot_by_bbox_cherry_tomato.py  params_mot_by_bbox_seedling.py  strawberry_harvesting_pollination.py
01_test_prin_tf/perception/ros2_ws/src/mf_mot_object_tracker/scripts/test/: .fuse_hidden000241fc0000015a  tf_data.csv  tf_data_labeled_cv2.csv
01_test_prin_tf/perception/ros2_ws/src/mf_mot_object_tracker/scripts/test2/: tf_data_labeled_cv2.csv
01_test_prin_tf/perception/ros2_ws/src/mf_mot_object_tracker/scripts/tmp/: good_tf.py  mot_by_bbox.py  mot_by_bbox_pre_a.py  mot_by_bbox_server.py  mot_by_keypoint.py  test.py  test_prin.py  test_tf.py  yolo_keypoints.py  yolo_multi.py
01_test_prin_tf/perception/ros2_ws/src/mf_mot_object_tracker/scripts/utils/: __init__.py  data_saver.py  depth_processor.py  image_visualizer.py  keypoint_processor.py  object_tracker.py  tf_generator.py
01_test_prin_tf/spagri/ros2_ws/src/mf_common/mf_msgs/: CMakeLists.txt  package.xml
01_test_prin_tf/spagri/ros2_ws/src/mf_common/mf_msgs/msg/: BehaviorTreeCommand.msg  BehaviorTreeStatus.msg  Endeffector.msg  HealthManager.msg  Heartbeat.msg  LiftControl.msg  LiftStatus.msg  MD200Control.msg  MD200Status.msg  ManipulatorControl.msg  ManipulatorStatus.msg
01_test_prin_tf/spagri/ros2_ws/src/mf_common/mf_msgs/srv/: MfService.srv
01_test_prin_tf/spagri/ros2_ws/src/mf_common/mf_serial/: CMakeLists.txt  package.xml
01_test_prin_tf/spagri/ros2_ws/src/mf_common/mf_serial/include/: md200_lift1400_def.hpp  mf_frame.hpp  mf_serial_base.hpp  test.hpp
01_test_prin_tf/spagri/ros2_ws/src/mf_common/mf_serial/src/: lift_main.cpp  md_main.cpp  mf_eef_driver.cpp  mf_eef_emulator.cpp  mf_serial_base.cpp  pub_lift_cmd.py  pub_md200_cmd.py
02_keypoints/: 002_mouse_callback.py  004_yolo_evaluation.py  batch_process.py  example_usage.py  folder_rename.py  model_load.py  requirements.txt  test.py  test_gui.py  yolo_evaluation.csv
03_camera/: camera_lens_distortion.py  test.py
(+377 files in other folders)
